tests/ui/nonliteral-overflow.stderr
error[E0370]: enum discriminant overflowed
  --> tests/ui/nonliteral-overflow.rs:22:5
   |
22 |     C,
   |     ^ overflowed on value after 255
   |
   = note: explicitly set `C = 0` if that is desired outcome
